# HippoBot_ennem_pred

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aquabot_common/lib/aquabot_common/: cloud_reader  gps2pose.py  waypoint_tracker.py
install/aquabot_common/lib/aquabot_common/utm/: CHANGELOG.rst  LICENSE  MANIFEST.in  __init__.py  _version.py  conversion.py  error.py
install/aquabot_common/share/aquabot_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/enemy_predictor/lib/enemy_predictor/: enemy_ship_predictor.py
install/enemy_predictor/share/enemy_predictor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/move/lib/move/: place_frame.py  tracker.py  waypoint_publisher
install/move/share/move/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
log/: latest_build  latest_list
src/Enemy Ship Predict/: CMakeLists.txt  package.xml
src/Enemy Ship Predict/scripts/: enemy_ship_predictor.py
src/install/: local_setup.sh  setup.sh  setup.zsh
src/log/: latest_build
src/my_robot_controller/: setup.py
src/my_robot_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/my_robot_controller/log/: latest_build
(+44 files in other folders)
